<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/usvisa" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/investor_title"
                    android:theme="@style/textViewStyleTitle" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvInvestorDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleLayout"
                android:layout_margin="8dp"
                android:text="@string/investorDescription"
                android:theme="@style/textViewStyleEducation" />

            <RadioGroup
                android:id="@+id/radioGroupInvestor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvInvestorDescription"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/onepoint3million"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="$1.35 million up to 3 yr"
                    android:theme="@style/textViewStyleEducation" />

                <RadioButton
                    android:id="@+id/onepinteight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="$1.80 million up to 3 yr"
                    android:theme="@style/textViewStyleEducation" />

                <RadioButton
                    android:id="@+id/notInterested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="Not Intested right now"
                    android:theme="@style/textViewStyleEducation" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvInvestorPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroupInvestor"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:text="10"
                android:theme="@style/textViewStylePoint" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvInvestorPoint"
                android:onClick="investorPreviousClick"
                android:text="@string/previous"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/PrimaryFlatButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tvInvestorPoint"
                android:onClick="investorSkipClick"
                android:text="@string/skip"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/PrimaryFlatButton" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvInvestorPoint"
                android:onClick="investorNextClick"
                android:text="@string/next"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/PrimaryFlatButton" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
</RelativeLayout>